@@ -163,14 +163,14 @@ public:
   void addRoadmap(const CkitNotificationConstShPtr& i_notification);
 
   
-  /**
+  /*
      \brief Draws the roadmap at its current state when the associated notification is received
      \param i_notification Received notification.
 
      \note the notification must be sent with a Shared pointer on a CkwsRoadmapBuilder object in order
      to know which roadmap have to be updated.
   */
-  void addEdge(const CkitNotificationConstShPtr& i_notification);
+  //void addEdge(const CkitNotificationConstShPtr& i_notification);
 
   /**
      \brief Removes all graphic roadmaps from the vector of roadmaps
