@@ -1,3 +1,8 @@
+2007/11/09
+	Modification og KwsGraphicRoadmap to allow drawing of each joint's
+	roadmap separately. joints that will drawn are selected via their
+	displayPath property
+
 2007/11/07
 	Reorganization of header files to solve some compilation problems.
 
